# Natural-Language-Processing-Models

./: README.md  pyproject.toml  requirements.txt
word-ebmedding/: 1-vocabulary.ipynb  embedding-model.py  vocabulary.ipynb
